# mocksdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Trie  Trie Algorithm  Trie.cpp  aho-corasick  aho_corasick  aho_corasick.cpp  algorithm.cpp  class TrieNode:.py  client.cpp  command_sequence_calc_log.txt  helloworld.grpc.pb.cc  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.pb.h  helloworld.proto  main.c  server.cpp
config/: config.h.in  config.yaml
docker_setup/alg_project/: Makefile
docker_setup/alg_project/include/: aho_corasick.h
docker_setup/alg_project/src/: aho_corasick  aho_corasick.cpp
docker_setup/alg_project/testsrc/: aho_corasick_test.cpp
include/: Calculator.h  ConfigReader.h  MathFunctions.h
src/: Calculator.cpp  ConfigReader.cpp  MathFunctions.cpp  main.cpp
